--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500;600;700;800&family=Montserrat:wght@300;400;500;600;700;800;900&family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Rebu</title>
+    <title>TechZenik Delivery App Prototype</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
